Fix and update all doc

--- a/slitaz/style.css
+++ b/slitaz/style.css
@@ -1,5 +1,6 @@
 /* CSS style for SliTaz Doc */
 
+html { min-height:  102%; }
 body { font: 88% sans-serif, vernada, arial; margin: 0; }
 h1 { margin: 0; padding: 8px; color: #fff; font-size: 20px; }
 h2 { color: #d66018; } h3 { color: #666; font-size: 140%; }
